[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guardrails"
version = "0.1.0"
description = "Production guardrails for LLM agent outputs — schema validation, content safety, retry logic"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Darshankumar Joshi", email = "darshjme@gmail.com"},
]
keywords = ["llm", "agents", "guardrails", "pydantic", "validation", "safety", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/darshjme/agent-guardrails"
Repository = "https://github.com/darshjme/agent-guardrails"
Issues = "https://github.com/darshjme/agent-guardrails/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_guardrails*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
